Fixed potential viewer bugs reported by findbugs. Most of the fixed ones are performance bugs.