@@ -70,7 +70,7 @@ public class BirtRunReportActionHandler extends AbstractBaseActionHandler
 		options.setOption( InputOptions.OPT_REQUEST, context.getRequest( ) );
 		options.setOption( InputOptions.OPT_LOCALE, attrBean.getLocale( ) );
 		options.setOption( InputOptions.OPT_TIMEZONE, attrBean.getTimeZone( ) );
-		options.setOption( InputOptions.OPT_IS_DESIGNER, new Boolean( attrBean
+		options.setOption( InputOptions.OPT_IS_DESIGNER, Boolean.valueOf( attrBean
 				.isDesigner( ) ) );
 
 		// handle operation
